--- a/css/style_desktop.css
+++ b/css/style_desktop.css
@@ -4,6 +4,11 @@
         margin-inline: auto;
         padding: 0;
     }
+    header{
+        padding-block: 0;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+    }
     .logo img{
         width: auto;
     }
@@ -42,6 +47,7 @@
     .primary-news-element{
         place-items: center;
         gap: 6rem;
+        margin-block-start: 2rem !important;
         margin-block-end: 0 !important;
     }
     .primary-news-text{
